refactoring ChatServiceImpl